feat: almost complete frontend
Do the search box + search click + do for loop in search.html by fetch mock API (edit in search.js)

--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -50,3 +50,16 @@ input[type="text"]:focus {
 .team-button:hover {
   background-color: #0088cc;
 }
+
+.search-button {
+  border-radius: 50px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-color: gray;
+}
+
+.search-button:hover {
+  background: linear-gradient(145deg, #ffffff, #e6e6e6);
+  box-shadow: 5px 5px 25px #cfcfcf, -5px -5px 25px #ffffff;
+}
